java 11 run without make test